@@ -14,8 +14,10 @@ namespace Astroid {
 
       /* hpane: can be split into two horizontal panes */
       Gtk::Paned paned;
-      Mode * pw1;
-      Mode * pw2;
+      Gtk::EventBox * fp1 = NULL;
+      Gtk::EventBox * fp2 = NULL;
+      Mode * pw1 = NULL;
+      Mode * pw2 = NULL;
       int packed = 0;
 
       int  current = -1;
