@@ -9,6 +9,9 @@
 
 * `scons --propagate-environment` uses environment from build environment.
 
+* Show pane-focus with blue bar at top, swap focus with M-space. The
+  keybinding is now located at 'pane.swap_focus'.
+
 == v0.7 / 2017-01-02
 
 * Messages are marked unread after a delay (default 2 sec) in
